@@ -94,6 +94,9 @@ x2goserver (4.1.0.4-0x2go1.1) UNRELEASED; urgency=medium
       reasons.
     - x2goserver/bin/x2gopath.in: rework quoting, variable usage, drop
       unnecessary semicolons etc.
+    - x2goserver/bin/x2gopath.in: hardcode LIBDIR, PREFIX and SHAREDIR at
+      build time, but also allow re-rooting afterwards - derived from the
+      original values.
   * debian/control:
     + Build-depend upon lsb-release for distro version detection.
   * debian/x2goserver.manpages:
